--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "morsefy",
-  "version": "0.0.7",
+  "version": "0.0.8",
   "description": "Encode and decode morse directly from the command line",
-  "main": "app.js",
+  "main": "./morsefy.js",
   "dependencies": {
     "commander": "^2.8.1"
   },
@@ -23,6 +23,9 @@
     "encode",
     "decode"
   ],
+  "engines": {
+    "node": ">=0.6.0"
+  },
   "author": "Henrick Martins (Razr9)",
   "license": "MIT"
 }
