--- a/package.json
+++ b/package.json
@@ -6,16 +6,18 @@
   "dependencies": {
     "commander": "^2.8.1"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "mocha": "^2.3.3"
+  },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha test"
   },
   "bin": {
     "morsefy": "app.js"
   },
   "repository": {
-  "type": "git",
-  "url": "https://github.com/Razr9/Morsefy.git"
+    "type": "git",
+    "url": "https://github.com/Razr9/Morsefy.git"
   },
   "preferGlobal": "true",
   "keywords": [
