--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "morsefy",
-  "version": "0.0.8",
+  "version": "1.0.0",
   "description": "Encode and decode morse directly from the command line",
-  "main": "./morsefy.js",
+  "main": "./lib/node/morsefy.js",
   "dependencies": {
     "commander": "^2.8.1"
   },
@@ -13,13 +13,12 @@
     "test": "mocha test"
   },
   "bin": {
-    "morsefy": "app.js"
+    "morsefy": "./lib/node/cli.js"
   },
   "repository": {
     "type": "git",
     "url": "https://github.com/Razr9/Morsefy.git"
   },
-  "preferGlobal": "true",
   "keywords": [
     "morse",
     "encode",
