--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/Razr9/Morsefy.git"
+    "url": "https://github.com/DevNull/Morsefy.git"
   },
   "keywords": [
     "morse",
@@ -27,6 +27,6 @@
   "engines": {
     "node": ">=0.6.0"
   },
-  "author": "Henrick Martins (Razr9)",
+  "author": "Henrick Mello (DevNvll)",
   "license": "MIT"
 }
